- fixed chapter title bug in firefox - fixed bug leading to long borders in firefox - attempt to fix font bug on iOS devices

--- a/public/stylesheets/main_style.css
+++ b/public/stylesheets/main_style.css
@@ -6,6 +6,7 @@ html, body {
     width: 100%;
     padding: 0;
     margin: 0;
+    -web-text-size-adjust: none;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -72,8 +73,6 @@ footer {
     right: 0;
     height: 48px;
     text-align: center;
-    border-top: 1px solid #cccccc;
-    border-bottom: 1px solid #cccccc;
     background-color: #cccccc;
     color: black;
     line-height: 1.5em;
@@ -109,7 +108,7 @@ aside {
 }
 
 #flex-main-content {
-    min-height: 100%;
+    min-height: 320px;
     min-width: 640px;
     flex: 1;
     box-orient: vertical;
